fix(alert): align more closely with ios spec

--- a/core/src/components/alert/alert.ios.scss
+++ b/core/src/components/alert/alert.ios.scss
@@ -95,7 +95,7 @@
   background-color: $alert-ios-input-background-color;
   appearance: none;
 
-  font-size: dynamic-font(17px);
+  font-size: dynamic-font(16px);
 
   &::placeholder {
     color: $alert-ios-input-placeholder-color;
